# python-service-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_items_table.py  0002_audit_logs_and_indexes.py
app/: main.py
app/api/: deps.py  exceptions.py  v1_router.py
app/api/middleware/: audit.py  rate_limit.py  request_id.py
app/api/routes/: health.py  items.py
app/api/routes/v1/: health.py  items.py
app/core/: config.py  lifespan.py  logging.py  metrics.py  metrics_paths.py  redis.py  security.py  startup.py  telemetry.py
app/db/: models.py  session.py
app/domain/: exceptions.py  user.py
app/schemas/: item.py
app/services/: audit_service.py  idempotency_service.py  item_service.py
deploy/helm/python-service-template/: Chart.yaml  PRODUCTION.md  values-prod.yaml  values.yaml
deploy/helm/python-service-template/templates/: _helpers.tpl  deployment.yaml  service.yaml
docs/: CUSTOMIZE.md
docs/adr/: 0001-project-structure.md  0002-api-versioning-and-observability.md  0003-security-production-hardening.md
scripts/: rename_service.py
tests/: conftest.py  test_health.py  test_items.py
tests/integration/: conftest.py  test_items_postgres.py
tests/unit/: conftest.py  test_config.py  test_health.py  test_items.py  test_metrics_paths.py  test_security_features.py
